--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2024"
 
 [dependencies]
 aes-gcm = "0.10.3"
-chrono = "0.4.41"
+argon2 = "0.5.3"
+chrono = { version = "0.4.41", features = ["serde"]}
 clipboard = "0.5.0"
 prettytable = "0.10.0"
 rand = "0.9.1"
-
+serde = { version = "1.0.219", features = ["derive"] }
+uuid = { version = "1.17.0", features = ["v4", "serde"] }
+zeroize = { version = "1.8.1", features = ["serde"] }
