--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 aes-gcm = "0.10.3"
+anyhow = "1.0.98"
 argon2 = "0.5.3"
 chrono = { version = "0.4.41", features = ["serde"]}
 clipboard = "0.5.0"
