--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,15 @@ aes-gcm = "0.10.3"
 anyhow = "1.0.98"
 argon2 = "0.5.3"
 base64 = "0.22.1"
-chrono = { version = "0.4.41", features = ["serde"]}
+chrono = { version = "0.4.41", features = ["serde"] }
+clap = { version = "4.5.40", features = ["derive"] }
 clipboard = "0.5.0"
+console = "0.16.0"
+dialoguer = "0.11.0"
 dirs = "6.0.0"
 prettytable = "0.10.0"
 rand = "0.9.1"
+rpassword = "7.4.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
 uuid = { version = "1.17.0", features = ["v4", "serde"] }
