--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ argon2 = "0.5.3"
 base64 = "0.22.1"
 chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.40", features = ["derive"] }
-clipboard = {version ="0.5.0", features = ["cfg"]} 
+clipboard = "0.5.0"
 console = "0.16.0"
 dialoguer = "0.11.0"
 dirs = "6.0.0"
