--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "password_manager_cli"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = ["clipboard"]
+clipboard = ["dep:clipboard"]
+
 [dependencies]
 aes-gcm = "0.10.3"
 anyhow = "1.0.98"
@@ -10,7 +14,7 @@ argon2 = "0.5.3"
 base64 = "0.22.1"
 chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.40", features = ["derive"] }
-clipboard = "0.5.0"
+clipboard = { version = "0.5.0", optional = true }
 console = "0.16.0"
 dialoguer = "0.11.0"
 dirs = "6.0.0"
